# dailyCode

./: .clang-format  .gitignore  README.md  beginFormat.sh
common/: CMakeLists.txt
common/encrypt/: blowfish.cpp  blowfish.h  encrypt.h  xor.cpp  xor.h
common/include/: log_file.h  log_prefix.h  singleton.hpp  utils.h
common/src/: log_file.cpp  utils.cpp
script/: build.sh
test/: main.cpp
